# simpimc

./: .gitignore  .gitmodules  .travis.yml  AllPlots.sh  BatchRun.sh  CMakeLists.txt  Makefile  Makefile.Linux  README  README.md  Run.sh  doit.sh  genindex.html  index.html  objects.inv  params.json  patch.BGQ.CMakeLists.txt  patch.BGQ.config.hpp  runs.sh  runs.txt  searchindex.js
Analysis/: CalcStatistics.py  HistPlots.py  Plotting.py  ReadData.py  ScalarPlots.py
Analysis/Mathematica/: beadAcceptance.nb  checkRand.nb  corr.nb  corrf.nb  densitymatrix.nb  energies.nb  euler.nb  infnan.nb  nodeplot.nb  nodes.nb  omega.nb  omega2.nb  omega3.nb  omega3b.nb  r.nb  sgnPressure.nb
CMake/: FindEinspline.cmake  FindSSE.cmake  FindSphinx.cmake
doc/: Doxyfile.in
doc/doxygen/: Doxyfile.in
doc/html/: action__class_8h_source.html  algorithm__class_8h_source.html  annotated.html  bare__pair__action__class_8h_source.html  bead__class_8h_source.html  bisect__class_8h_source.html  class_action-members.html  class_action.html  class_algorithm-members.html  class_algorithm.html  class_bare_pair_action-members.html  class_bare_pair_action.html  class_bisect-members.html  class_bisect.html  class_contact_density-members.html  class_contact_density.html  class_david_pair_action-members.html  class_david_pair_action.html  class_displace_particle-members.html  class_displace_particle.html  class_energy-members.html  class_energy.html  class_event-members.html  class_event.html  class_free_nodal-members.html  class_free_nodal.html  class_ilkka_pair_action-members.html  class_ilkka_pair_action.html  class_importance_weight-members.html  class_importance_weight.html  class_kinetic-members.html  class_kinetic.html  class_loop-members.html  class_loop.html  class_move-members.html  class_move.html  class_nodal-members.html  class_nodal.html  class_observable-members.html  class_observable.html  (+109 more)
doc/sphinx/: Makefile  conf.py
docs/: Makefile  conf.py  index.rst
docs/doxygen/: Doxyfile
doctrees/: environment.pickle  index.doctree
doxygen/html/: action__class_8h_source.html  algorithm__class_8h_source.html  annotated.html  bare__pair__action__class_8h_source.html  bead__class_8h_source.html  bisect__class_8h_source.html  class_action-members.html  class_action.html  class_algorithm-members.html  class_algorithm.html  class_bare_pair_action-members.html  class_bare_pair_action.html  class_bisect-members.html  class_bisect.html  class_contact_density-members.html  class_contact_density.html  class_david_pair_action-members.html  class_david_pair_action.html  class_displace_particle-members.html  class_displace_particle.html  class_energy-members.html  class_energy.html  class_event-members.html  class_event.html  class_free_nodal-members.html  class_free_nodal.html  class_ilkka_pair_action-members.html  class_ilkka_pair_action.html  class_importance_weight-members.html  class_importance_weight.html  class_kinetic-members.html  class_kinetic.html  class_loop-members.html  class_loop.html  class_move-members.html  class_move.html  class_nodal-members.html  class_nodal.html  class_observable-members.html  class_observable.html  (+162 more)
html/: .buildinfo
inputs/: e-p.h5  example.in  free.in  free.xml  gen_h_pa.py  h-Ilkka.xml  h-atom.xml  h.xml  sho.in  sho.xml  singleparticle.in  test.xml
inputs/C/: c.xml  gen_pa_ilkka.py
inputs/e-gas/: e-gas.xml  gen_e_pa.py
inputs/free/: free.xml
inputs/h-atom/: e.xyz  gen_h_pa.py  gen_h_pa_david.py  gen_h_pa_ilkka.py  h-atom.xml  h-david.xml  h-ilkka.xml  p.xyz
inputs/longRange/: e-e.sq.yk  e-p.sq.yk  p-p.sq.yk
inputs/sho/: sho.xml
machines/: cab_build.sh  cab_modules.sh  comet_build.sh  comet_modules.sh  titan_build.sh  titan_modules.sh
scripts/: Analysis.py  CopyClones.py  Cycles.py  DavidParse.py  DavidSquarer.py  Energy.py  FitPA.py  FixTail.py  GenGrid.py  GenPairAction.py  H-input.py  IlkkaSquarer.py  IlkkaToSimpimc.py  Makefile  PairCorrelation.py  PlotPath.py  PlotTraces.py  Stats.cpp  Stats.py  genDM.py  hydrogen.py  test.py
sphinx/: Makefile
src/: Action.cpp  Action.depends  ActionClass.h  AlgorithmClass.cpp  AlgorithmClass.h  BeadClass.cpp  BeadClass.depends  BeadClass.h  EventClass.cpp  EventClass.h  Fermions.cpp  Fermions.depends  GlobalConstants.h  InitPaths.cpp  LoopClass.cpp  LoopClass.h  Numerics.cpp  Observables.cpp  PathClass.cpp  PathClass.depends  PathClass.h  RNG.cpp  RNG.h  RNG2.h  RNGClass.depends  RNGClass.h  SimulationClass.cpp  SimulationClass.depends  SimulationClass.h  SpeciesClass.cpp  SpeciesClass.h  StandardLibraries.h  Stats.cpp  Stats.depends  Stats.h  WriteClass.cpp  WriteClass.h  algorithm_class.cc  algorithm_class.h  bead_class.h  (+18 more)
src/Actions/: ActionClass.cpp  ActionClass.h  BarePairActionClass.cpp  BarePairActionClass.h  CoulombClass.cpp  CoulombClass.h  DavidPairActionClass.cpp  DavidPairActionClass.h  FreeNodalClass.cpp  FreeNodalClass.h  IlkkaPairActionClass.cpp  IlkkaPairActionClass.h  ImportancePairActionClass.cpp  ImportancePairActionClass.h  Kinetic.cpp  Kinetic.h  KineticClass.cpp  KineticClass.h  LongRangeClass.h  NodalClass.cpp  NodalClass.h  OptimizedNodalClass.cpp  OptimizedNodalClass.h  PairActionClass.cpp  PairActionClass.h  TrapClass.cpp  TrapClass.h  action_class.h  bare_pair_action_class.cc  bare_pair_action_class.h  david_pair_action_class.cc  david_pair_action_class.h  free_nodal_class.cc  free_nodal_class.h  ilkka_pair_action_class.cc  ilkka_pair_action_class.h  importance_pair_action_class.cc  kinetic_class.h  nodal_class.cc  optimized_nodal_class.cc  (+1 more)
src/Communication/: Communication.cpp  Communication.h
src/IO/: IOClass.h  IO_Datatype.h  InputClass.cpp  InputClass.h  InputFile.cpp
src/Moves/: BisectClass.cpp  BisectClass.depends  BisectClass.h  DisplaceAllClass.cpp  DisplaceAllClass.depends  DisplaceAllClass.h  DisplaceBeadClass.cpp  DisplaceBeadClass.depends  DisplaceBeadClass.h  DisplaceParticleClass.cpp  DisplaceParticleClass.depends  DisplaceParticleClass.h  MoveClass.cpp  MoveClass.depends  MoveClass.h  PermBisectClass.cpp  PermBisectClass.depends  PermBisectClass.h  (+12 more)
(+587 files in other folders)
